<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Environment Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in_button_label">Sign in by Google</string>
    <string name="signin_label">Choose sign in method</string>
    <string name="no_internet_connection_label">Connection to the internet is not available now, try sign in to system later.</string>
    <string name="login_label">Login ...</string>
    <string name="logout">Sign Out</string>
    <string name="home">Points list</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">environmentmonitor.digitallifelab.com</string>
    <string name="content_authority" translatable="false">com.digitallifelab.environmentmonitor</string>
    <string name="title_activity_detail_point">Point information</string>
    <string name="No_information_available">No information available</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_shov_on_map">Show point on map</string>
    <string name="title_activity_new_point">New point</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="point_description_text">Lorem Ipsum dolor sit amet, consectetuer adipiscingelit. Duis tellus. Donec ante dolor, iaculis nec, </string>
    <string name="head_line">Headline</string>
    <string name="point_description">Description</string>
    <string name="no_images_caption">Images was not added</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="delete_item_label">Delete image</string>
    <string name="add_photo_dialog_caption">Add Photo!</string>
    <string name="take_photo_caption">Take Photo</string>
    <string name="chose_from_library_caption">Choose from Library</string>
    <string name="select_file_caption">Select File</string>
    <string name="dialog_message_delete">Delete this image ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete_image">Delete image</string>
    <string name="title_activity_edit_point">Edit point</string>
    <string name="dialog_message_delete_point">Delete item ?</string>
    <string name="balnk_fragment_text">There is no information</string>
    <string name="not_item_owner_warning">You are not owner of this item.</string>
    <string name="placeholder_for_your_message">Type your message here</string>
    <string name="send_message">Send message</string>
    <string name="message_title_error">Error</string>
    <string name="send_data_to_server">Send data to server ...</string>
    <string name="deleting_data_from_server">Deleting data</string>
    <string name="save_element">Save element</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for distance -->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->

    <string name="default_units_prefs_value" translatable="false">K</string>

    <string name="pref_title_units_prefs">Units</string>

    <string-array name="pref_units_prefs_titles">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <string-array name="pref_units_prefs_values" translatable="false">
        <item>K</item>
        <item>M</item>
    </string-array>

    <string name="error_access_message">Cannot get access to server</string>
    <string name="login_error_message">You are not logged in</string>
    <string name="error_no_internet_connection">No internet connection available, data cannot uploaded.</string>
    <string name="today">Today</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tab_detail">Detail</string>
    <string name="tab_messages">Messages</string>
    <string name="point_photo_description">Point\'s photo</string>
    <string name="photo_description">Photo of point</string>
    <string name="photo_of_point">Photo of point</string>
    <string name="hint_description">Description</string>
    <string name="me_label">Me</string>
    <string name="device_not_supported_message">This device is not supported.</string>
    <string name="title_activity_map">Points on map</string>
    <string name="action_share">Share</string>
    <string name="map_view_nav_bar">Map view</string>
    <string name="new_message_notyfication">You have new message.</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Message Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="add_widget">Add widget</string>
    <string name="title_widget_list">Environment monitor list</string>
    <string name="add_new_point">Add new point</string>
    <string name="login_by_google">Login by Google</string>

</resources>
