<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.digitallifelab.environmentmonitor.DetailPointActivity">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="102"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="103"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_on_map"
        android:orderInCategory="105"
        android:title="@string/action_shov_on_map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:showAsAction="always"/>
</menu>
