<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:id="@+id/id_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_of_point"
            android:id="@+id/textView3"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="146dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_imageViewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/id_no_images_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_images_caption"
                android:gravity="center"
                />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/headlineTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lorem Ipsum dolor sit amet"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Author"
                    android:singleLine="true"
                    android:layout_weight="70"
                    android:gravity="left"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01-01-2015"
                    android:singleLine="true"
                    android:layout_weight="30"
                    android:gravity="right"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_description"
            android:id="@+id/textView2"
            android:layout_marginLeft="16dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point_description_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
