<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/layVrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.98"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/messagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transcriptMode="alwaysScroll" />

            <TextView
                android:id="@+id/messages_list_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/No_information_available"
                app:layout_anchor="@+id/idPointsListView"
                app:layout_anchorGravity="fill" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.02"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btSend"
            android:layout_toLeftOf="@+id/btSend"
            android:gravity="top"
            android:hint="@string/placeholder_for_your_message"
            android:imeOptions="actionSend"
            android:inputType="textShortMessage" />

        <ImageButton
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="#00ffffff"
            android:gravity="center_vertical|right"
            android:src="@android:drawable/ic_menu_send"
            android:text="@string/send_message"
            android:textSize="18sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />
    </RelativeLayout>

</LinearLayout>
