<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_new_point_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/big_activity_horizontal_padding"
            android:paddingTop="@dimen/small_activity_horizontal_padding"
            tools:context="com.digitallifelab.environmentmonitor.NewPointActivityFragment">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:text="@string/photo_of_point"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginTop="@dimen/small_activity_horizontal_margin"
                android:background="@color/images_list_background">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/id_imageViewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/id_no_images_caption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_images_caption" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/big_activity_horizontal_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:gravity="left"
                        android:singleLine="true"
                        android:text="Author"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="01-01-2015"
                        android:textSize="14sp" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">

                    <EditText
                        android:id="@+id/headlineTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/head_line"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="100"
                        android:maxLines="2"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Take photo"
                android:visibility="gone"
                android:contentDescription="@string/take_photo_caption"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <EditText
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/point_description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="300"
                    android:minLines="4"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_photo_camera_white_24dp"
            app:layout_anchor="@id/id_imageViewer"
            app:layout_anchorGravity="bottom|right"
            android:contentDescription="@string/take_photo_caption"/>

    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.NestedScrollView>